--- a/src/test/resources/cucumber.properties
+++ b/src/test/resources/cucumber.properties
@@ -1,3 +1,3 @@
-cucumber.publish.enabled=false
+cucumber.publish.enabled=true
 cucumber.publish.quiet=true
 cucumber.plugin=html:target/report.html,json:target/report.json,pretty
